--- a/apps/text-contrast/package.json
+++ b/apps/text-contrast/package.json
@@ -2,26 +2,20 @@
   "name": "text-contrast",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/app.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js"
+    "start": "node src/app.js"
   },
   "keywords": [
     "machine-learning",
     "brain.js",
     "neural-networks",
-    "node",
-    "typescript"
+    "node"
   ],
   "author": "Gavin de Bruyn",
   "license": "MIT",
   "dependencies": {
-    "brain.js": "2.0.0-beta.16",
+    "brain.js": "2.0.0-beta.18",
     "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.1",
-    "@types/node": "16.11.4",
-    "typescript": "^4.9.5"
   }
 }
